# setuptools-cmd-deps

./: Pipfile  README.md  pytest.ini  setup.cfg  setup.py  setuptools_cmd_deps.py
.github/workflows/: ci.yml
fixtures/custom_cmd/: cmd_dep_fixture_custom_cmd.py  setup.py
fixtures/declarative/: cmd_dep_fixture_declarative_cmd.py  setup.cfg  setup.py
tests/: test_cmd_deps.py
