[metadata]
author = James Lan
author_email = jameslan@gmail.com
description = setuptools plugin to configure the dependency among commands
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5

[options.entry_points]
distutils.setup_keywords =
    cmd_deps = setuptools_cmd_deps:cmd_deps
setuptools.finalize_distribution_options =
    initialize_cmd_deps = setuptools_cmd_deps:finalize_cmd_deps
